# jinja2-renderer

./: .gitignore  README.md  flake.nix
flake-parts/: checks.nix  lib.nix  module-args.nix  packages.nix
flake-parts/modules/: lib.nix
jinja2-renderer/: pyproject.toml
jinja2-renderer/src/jinja2_renderer/: renderer.py
jinja2-renderer/tests/: test_load_variables.py
nix/: docs.nix  jinja2-renderer.nix  render-templates-module.nix  render-templates.nix
tests/: default.nix
tests/basic/: default.nix
tests/basic/expected/: example.txt
tests/basic/macros/: example_macros.j2
tests/basic/templates/: example.txt.j2
tests/strict/: default.nix
tests/strict/expected/: example.txt
tests/strict/templates/: example.txt.j2
